fiat charts seperated currencies api added for live data